# scSwitchFilter

./: LICENSE  README.md  pyproject.toml
src/scswfilt/: __init__.py  __main__.py  bam2sam.py  generate_negative_matrix.py  sam2tsv.py
src/scswitchfilter/: __main__.py  bam2sam.py  sam2tsv.py
